--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -937,14 +937,14 @@ img {
   position: fixed;
   z-index: 1;
   padding-top: 0px;
-  left: -80px;
+  margin-left: 0%;
   top: -155px;
-  width: 120%;
+  width: 170%;
   height: 900px;
   overflow: hidden;
-  background-color: #000000;
+  background: rgba(0, 0, 0, 0.568);
 
-  border: 1px solid white;
+  
 }
 
 /* Modal Content (image) */
@@ -1000,7 +1000,7 @@ img {
   position: absolute;
   top: 15px;
   right: 30px;
-  color: rgb(110, 94, 94);
+  color: rgb(0, 0, 0);
   font-size: 40px;
   transition: 0.3s;
   z-index: 1;
@@ -1242,6 +1242,34 @@ h2 {
   .four .social-menu {
     visibility: hidden;
   }
+  .cards {
+    margin-top: 50px;
+  }
+
+  .card {
+    height: 300px;
+  }
+
+  #img-1 {
+    width: 80%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 10%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close {
+    margin-top: 150px;
+    right: 80px;
+  }
+
+  .modal {
+    margin-left: 80px;
+    width: 100%;
+    height: 900px;
+    background: rgba(255, 255, 255, 0.9);
+  }
 }
 
 /* iPad PORTRAIT style here */
@@ -1320,7 +1348,6 @@ h2 {
     transform: scale(0.9);
   }
 
-
   .timeline-text {
     font-size: 16px;
     line-height: 15px;
@@ -1328,6 +1355,27 @@ h2 {
 
   .four .social-menu {
     visibility: hidden;
+  }
+  
+  #img-1 {
+    width: 100%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 0%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close {
+    margin-top: 150px;
+    right: 80px;
+  }
+
+  .modal {
+    margin-left: 80px;
+    width: 100%;
+    height: 900px;
+    background: rgba(255, 255, 255, 0.9);
   }
 }
 
@@ -1433,6 +1481,26 @@ h2 {
     margin-top: 100px;
     transform: scale(0.9);
   }
+  #img-1 {
+    width: 98%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 1%;
+    align-items: center;
+    justify-content: center;
+  }
+  .modal {
+    margin-left: 0px;
+    width: 130%;
+    height: 900px;
+    background: rgba(0, 0, 0, 0.9);
+    border: none;
+  }
+  .close{
+    color: white;
+    margin-right: 100px;
+    margin-top: 100px;
+  }
 
 }
 
@@ -1460,16 +1528,6 @@ h2 {
   .timeline-text {
     font-size: 16px;
     line-height: 15px;
-  }
-
-  .glitch {
-    height: -50px;
-  }
-
-  .profile-image {
-    height: 500px;
-    width: 500px;
-    margin-top: -100px;
   }
 
   /* third page */
@@ -1503,7 +1561,6 @@ h2 {
     margin-top: 190px;
     transform: scale(0.9);
   }
-
 }
 
 /*Surafce duo portrait*/
@@ -1568,7 +1625,7 @@ h2 {
 
   /* last page */
   .timeline {
-    margin-top: 0px;
+    margin-top: 70px;
   }
 
   .timeline-text {
@@ -1578,5 +1635,34 @@ h2 {
 
   .four .social-menu {
     visibility: hidden;
+  }
+
+  .cards {
+    margin-top: 50px;
+  }
+
+  .card {
+    height: 300px;
+  }
+
+  #img-1 {
+    width: 60%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 20%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close {
+    margin-top: 150px;
+    right: 80px;
+  }
+
+  .modal {
+    margin-left: 80px;
+    width: 540px;
+    height: 800px;
+    background: rgba(255, 255, 255, 0.9);
   }
 }
