--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body {
   animation: 1s blink step-end infinite;
 }
 
-@keyframes "blink" {
+@keyframes blink {
 
   from,
   to {
@@ -122,7 +122,7 @@ body {
   }
 }
 
-@-webkit-keyframes "blink" {
+@-webkit-keyframes blink {
 
   from,
   to {
@@ -134,7 +134,7 @@ body {
   }
 }
 
-@-ms-keyframes "blink" {
+@-ms-keyframes blink {
 
   from,
   to {
@@ -146,7 +146,7 @@ body {
   }
 }
 
-@-o-keyframes "blink" {
+@-o-keyframes blink {
 
   from,
   to {
@@ -360,6 +360,7 @@ body {
   margin: 0;
   transform: translate(-50%, -50%);
   display: flex;
+  background-color: #00ace6;
 }
 
 .social-menu ul li {
@@ -437,6 +438,7 @@ body {
   transform: translate(-50%, -50%);
   display: flex;
   transform: scale(0.6);
+
 }
 
 /* name and last name heading */
@@ -1509,8 +1511,18 @@ h2 {
 
   body,
   html {
-    width: 100% !important;
+    width: 102%;
+    margin: 0 auto;
+ 
+   
   }
+  * {
+    box-sizing: border-box;
+    font-family: Poppins, Montserrat;
+    padding: 0;
+    margin: 0;
+  }
+  
 
   .about-me-text-two {
     width: 80%;
@@ -1534,6 +1546,7 @@ h2 {
   .cards {
     width: 130%;
   }
+
 
 }
 
