--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,6 @@ body {
 }
 
 @keyframes blink {
-
   from,
   to {
     color: transparent;
@@ -111,7 +110,6 @@ body {
 }
 
 @-moz-keyframes blink {
-
   from,
   to {
     color: transparent;
@@ -123,7 +121,6 @@ body {
 }
 
 @-webkit-keyframes blink {
-
   from,
   to {
     color: transparent;
@@ -135,7 +132,6 @@ body {
 }
 
 @-ms-keyframes blink {
-
   from,
   to {
     color: transparent;
@@ -147,7 +143,6 @@ body {
 }
 
 @-o-keyframes blink {
-
   from,
   to {
     color: transparent;
@@ -331,13 +326,17 @@ body {
 }
 
 .stars {
-  background: rgb(0, 0, 0) url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  background: rgb(0, 0, 0)
+    url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top
+    center;
   z-index: 0;
   opacity: 1;
 }
 
 .twinkling {
-  background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  background: transparent
+    url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat
+    top center;
   -moz-animation: move-twink-back 60s linear infinite;
   -ms-animation: move-twink-back 60s linear infinite;
   -o-animation: move-twink-back 70s linear infinite;
@@ -398,24 +397,30 @@ body {
 /* instagram hover */
 .social-menu ul li:nth-child(1) a:hover {
   background: #f09433;
-  background: -moz-linear-gradient(45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%);
-  background: -webkit-linear-gradient(45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%);
-  background: linear-gradient(45deg,
-      #f09433 0%,
-      #e6683c 25%,
-      #dc2743 50%,
-      #cc2366 75%,
-      #bc1888 100%);
+  background: -moz-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: -webkit-linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
 }
 
@@ -438,7 +443,6 @@ body {
   transform: translate(-50%, -50%);
   display: flex;
   transform: scale(0.6);
-
 }
 
 /* name and last name heading */
@@ -508,18 +512,24 @@ h1 {
 /* second page */
 .two {
   background: #282537;
-  background-image: -webkit-radial-gradient(top,
-      circle cover,
-      #2c2c2e 0%,
-      #000000 70%);
-  background-image: -moz-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 80%);
-  background-image: -o-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 90%);
+  background-image: -webkit-radial-gradient(
+    top,
+    circle cover,
+    #2c2c2e 0%,
+    #000000 70%
+  );
+  background-image: -moz-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 80%
+  );
+  background-image: -o-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 90%
+  );
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
   z-index: 4;
   background-size: cover;
@@ -703,18 +713,24 @@ h1 {
 /* page three */
 .three {
   background: #282537;
-  background-image: -webkit-radial-gradient(top,
-      circle cover,
-      #2c2c2e 0%,
-      #000000 70%);
-  background-image: -moz-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 80%);
-  background-image: -o-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 90%);
+  background-image: -webkit-radial-gradient(
+    top,
+    circle cover,
+    #2c2c2e 0%,
+    #000000 70%
+  );
+  background-image: -moz-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 80%
+  );
+  background-image: -o-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 90%
+  );
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
   z-index: 3;
   background-repeat: no-repeat;
@@ -741,18 +757,24 @@ h1 {
 
 .four {
   background: #282537;
-  background-image: -webkit-radial-gradient(top,
-      circle cover,
-      #2c2c2e 0%,
-      #000000 70%);
-  background-image: -moz-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 80%);
-  background-image: -o-radial-gradient(top,
-      circle cover,
-      #3c3b52 0%,
-      #000000 90%);
+  background-image: -webkit-radial-gradient(
+    top,
+    circle cover,
+    #2c2c2e 0%,
+    #000000 70%
+  );
+  background-image: -moz-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 80%
+  );
+  background-image: -o-radial-gradient(
+    top,
+    circle cover,
+    #3c3b52 0%,
+    #000000 90%
+  );
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
 
   z-index: 2;
@@ -783,7 +805,8 @@ input[type="radio"] {
   transition: transform 0.4s ease;
   cursor: pointer;
   overflow: hidden;
-  -webkit-box-reflect: below 1px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+  -webkit-box-reflect: below 1px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   border-radius: 0px;
 }
 
@@ -842,51 +865,51 @@ img {
   display: block;
 }
 
-#item-1:checked~.cards #song-3,
-#item-2:checked~.cards #song-1,
-#item-3:checked~.cards #song-2 {
+#item-1:checked ~ .cards #song-3,
+#item-2:checked ~ .cards #song-1,
+#item-3:checked ~ .cards #song-2 {
   transform: translatex(-40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked~.cards #song-2,
-#item-2:checked~.cards #song-3,
-#item-3:checked~.cards #song-1 {
+#item-1:checked ~ .cards #song-2,
+#item-2:checked ~ .cards #song-3,
+#item-3:checked ~ .cards #song-1 {
   transform: translatex(40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked~.cards #song-1,
-#item-2:checked~.cards #song-2,
-#item-3:checked~.cards #song-3 {
+#item-1:checked ~ .cards #song-1,
+#item-2:checked ~ .cards #song-2,
+#item-3:checked ~ .cards #song-3 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
 }
 
-#item-1:checked~.cards #song-1,
-#item-2:checked~.cards #song-2,
-#item-3:checked~.cards #song-4 {
+#item-1:checked ~ .cards #song-1,
+#item-2:checked ~ .cards #song-2,
+#item-3:checked ~ .cards #song-4 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
 }
 
-#item-2:checked~.player #test {
+#item-2:checked ~ .player #test {
   transform: translateY(0);
 }
 
-#item-2:checked~.player #test {
+#item-2:checked ~ .player #test {
   transform: translateY(-40px);
 }
 
-#item-3:checked~.player #test {
+#item-3:checked ~ .player #test {
   transform: translateY(-80px);
 }
 
-#item-:checked~.player #test {
+#item-:checked ~ .player #test {
   transform: translateY(-80px);
 }
 
@@ -945,8 +968,6 @@ img {
   height: 900px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0.568);
-
-  
 }
 
 /* Modal Content (image) */
@@ -1070,7 +1091,7 @@ img {
 }
 
 /* BOXES hover */
-.container-timeline:hover>.content,
+.container-timeline:hover > .content,
 .left {
   opacity: 1;
 }
@@ -1111,7 +1132,6 @@ img {
 
 /* Media queries */
 @media screen and (max-width: 600px) {
-
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
@@ -1172,7 +1192,6 @@ h2 {
 
 /* Media queries */
 @media only screen and (min-width: 280px) and (max-width: 425px) and (orientation: portrait) {
-
   /* first page */
   h1 {
     width: 100%;
@@ -1232,13 +1251,14 @@ h2 {
 
   /* last page */
   .timeline {
-    margin-top: 90px;
+    margin-top: 50px;
     overflow: hidden;
   }
 
   .timeline-text {
-    font-size: 16px;
-    line-height: 15px;
+    font-size: 3vw;
+    line-height: 12px;
+   
   }
 
   .four .social-menu {
@@ -1276,7 +1296,6 @@ h2 {
 
 /* iPad PORTRAIT style here */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-
   body,
   html {
     width: 100%;
@@ -1358,7 +1377,7 @@ h2 {
   .four .social-menu {
     visibility: hidden;
   }
-  
+
   #img-1 {
     width: 100%;
     height: 500px;
@@ -1383,7 +1402,6 @@ h2 {
 
 /* Laptops, Desktops */
 @media (min-width: 1024px) and (max-width: 1280px) {
-
   body,
   html {
     width: 100%;
@@ -1498,23 +1516,19 @@ h2 {
     background: rgba(0, 0, 0, 0.9);
     border: none;
   }
-  .close{
+  .close {
     color: white;
     margin-right: 100px;
     margin-top: 100px;
   }
-
 }
 
 /* Large desktop */
 @media (min-width: 1440px) {
-
   body,
   html {
     width: 102%;
     margin: 0 auto;
- 
-   
   }
   * {
     box-sizing: border-box;
@@ -1522,7 +1536,6 @@ h2 {
     padding: 0;
     margin: 0;
   }
-  
 
   .about-me-text-two {
     width: 80%;
@@ -1546,8 +1559,6 @@ h2 {
   .cards {
     width: 130%;
   }
-
-
 }
 
 /* 4k screens */
@@ -1579,7 +1590,6 @@ h2 {
 
 /*Surafce duo portrait*/
 @media screen and (min-width: 426px) and (max-width: 600px) and (orientation: portrait) {
-
   /* first page */
   h1 {
     width: 100%;
