--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1504,7 +1504,7 @@ h2 {
 }
 
 /* Large desktop */
-@media (min-width: 1440px) {
+@media (min-width: 1281px) {
 
   body,
   html {
@@ -1673,3 +1673,216 @@ h2 {
     background: rgba(255, 255, 255, 0.9);
   }
 }
+@media only screen and (min-width: 600px) and (max-width: 767px){
+
+  body,
+  html {
+    width: 100%;
+  }
+
+  /* first page */
+  h1 {
+    width: 100%;
+    font-size: 60px;
+  }
+
+  .loading:after {
+    display: block;
+    margin: 0 auto;
+    margin-top: 50%;
+  }
+
+  .blinking-cursor {
+    font-size: 60px;
+  }
+
+  /* second page */
+  .about-me-text-one {
+    font-size: 60px;
+  }
+
+  .about-me-text-two {
+    font-size: 26px;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  #social-two {
+    transform: scale(0.7);
+    left: 70%;
+    top: 20%;
+  }
+
+  .glitch {
+    background-image: url(/assets/img/prof\ chair.png);
+    background-position: right;
+    display: none;
+  }
+
+  .profile-image {
+    width: 300px;
+    height: 300px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    content: url(/assets/img/[removal.ai]_tmp-61d354a4b6e2c.png);
+    background-color: #0cbaba;
+    background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
+    border: 1px solid white;
+  }
+
+  /* third page */
+  .cards {
+    margin-top: 20px;
+    width: 75%;
+  }
+
+  /* last page */
+  .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+    transform: scale(0.9);
+  }
+
+  .timeline-text {
+    font-size: 16px;
+    line-height: 15px;
+  }
+
+  .four .social-menu {
+    visibility: hidden;
+  }
+
+  #img-1 {
+    width: 100%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 0%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close {
+    margin-top: 150px;
+    right: 80px;
+  }
+
+  .modal {
+    margin-left: 0px;
+    width: 100%;
+    height: 900px;
+    background: rgba(255, 255, 255, 0.9);
+  }
+}
+@media only screen and (min-width: 882px) and (max-width: 1023px){
+
+  body,
+  html {
+    width: 100%;
+  }
+
+  /* first page */
+  h1 {
+    width: 100%;
+    font-size: 60px;
+  }
+
+  .loading:after {
+    display: block;
+    margin: 0 auto;
+    margin-top: 50%;
+  }
+
+  .blinking-cursor {
+    font-size: 60px;
+  }
+
+  /* second page */
+  .about-me-text-one {
+    font-size: 60px;
+  }
+
+  .about-me-text-two {
+    font-size: 26px;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  #social-two {
+    transform: scale(0.7);
+    left: 70%;
+    top: 20%;
+  }
+
+  .glitch {
+    background-image: url(/assets/img/prof\ chair.png);
+    background-position: right;
+    display: none;
+  }
+
+  .profile-image {
+    width: 300px;
+    height: 300px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    content: url(/assets/img/[removal.ai]_tmp-61d354a4b6e2c.png);
+    background-color: #0cbaba;
+    background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
+    border: 1px solid white;
+  }
+
+  /* third page */
+  .cards {
+    margin-top: 20px;
+    width: 75%;
+  }
+
+  /* last page */
+  .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+    transform: scale(0.9);
+  }
+
+  .timeline-text {
+    font-size: 16px;
+    line-height: 15px;
+  }
+
+  .four .social-menu {
+    visibility: hidden;
+  }
+
+  #img-1 {
+    width: 100%;
+    height: 500px;
+    margin-top: 205px;
+    margin-left: 0%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close {
+    margin-top: 150px;
+    right: 80px;
+  }
+
+  .modal {
+    margin-left: 0px;
+    width: 100%;
+    height: 900px;
+    background: rgba(255, 255, 255, 0.9);
+  }
+
+
+}
+
