--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ body {
 }
 
 @keyframes blink {
+
   from,
   to {
     color: transparent;
@@ -114,6 +115,7 @@ body {
 }
 
 @-moz-keyframes blink {
+
   from,
   to {
     color: transparent;
@@ -125,6 +127,7 @@ body {
 }
 
 @-webkit-keyframes blink {
+
   from,
   to {
     color: transparent;
@@ -136,6 +139,7 @@ body {
 }
 
 @-ms-keyframes blink {
+
   from,
   to {
     color: transparent;
@@ -147,6 +151,7 @@ body {
 }
 
 @-o-keyframes blink {
+
   from,
   to {
     color: transparent;
@@ -330,17 +335,13 @@ body {
 }
 
 .stars {
-  background: rgb(0, 0, 0)
-    url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top
-    center;
+  background: rgb(0, 0, 0) url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
   z-index: 0;
   opacity: 1;
 }
 
 .twinkling {
-  background: transparent
-    url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat
-    top center;
+  background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
   -moz-animation: move-twink-back 60s linear infinite;
   -ms-animation: move-twink-back 60s linear infinite;
   -o-animation: move-twink-back 70s linear infinite;
@@ -400,36 +401,29 @@ body {
 /* instagram hover */
 .social-menu ul li:nth-child(5) a:hover {
   background: #f09433;
-  background: -moz-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  background: -webkit-linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-  background: linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
+  background: -moz-linear-gradient(45deg,
+      #f09433 0%,
+      #e6683c 25%,
+      #dc2743 50%,
+      #cc2366 75%,
+      #bc1888 100%);
+  background: -webkit-linear-gradient(45deg,
+      #f09433 0%,
+      #e6683c 25%,
+      #dc2743 50%,
+      #cc2366 75%,
+      #bc1888 100%);
+  background: linear-gradient(45deg,
+      #f09433 0%,
+      #e6683c 25%,
+      #dc2743 50%,
+      #cc2366 75%,
+      #bc1888 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
 }
 
 .social-menu ul li:nth-child(3) a:hover {
-  background: linear-gradient(to bottom left, transparent 49%, #fbbc05 50%) 0
-      25%/48% 40%,
+  background: linear-gradient(to bottom left, transparent 49%, #fbbc05 50%) 0 25%/48% 40%,
     linear-gradient(to top left, transparent 49%, #fbbc05 50%) 0 75%/48% 40%,
     linear-gradient(-40deg, transparent 53%, #ea4335 54%),
     linear-gradient(45deg, transparent 46%, #4285f4 48%), #34a853;
@@ -533,24 +527,18 @@ h1 {
 /* second page */
 .two {
   background: #282537;
-  background-image: -webkit-radial-gradient(
-    top,
-    circle cover,
-    #2c2c2e 0%,
-    #000000 70%
-  );
-  background-image: -moz-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 80%
-  );
-  background-image: -o-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 90%
-  );
+  background-image: -webkit-radial-gradient(top,
+      circle cover,
+      #2c2c2e 0%,
+      #000000 70%);
+  background-image: -moz-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 80%);
+  background-image: -o-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 90%);
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
   z-index: 4;
   background-size: cover;
@@ -715,24 +703,18 @@ h1 {
 /* page three */
 .three {
   background: #282537;
-  background-image: -webkit-radial-gradient(
-    top,
-    circle cover,
-    #2c2c2e 0%,
-    #000000 70%
-  );
-  background-image: -moz-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 80%
-  );
-  background-image: -o-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 90%
-  );
+  background-image: -webkit-radial-gradient(top,
+      circle cover,
+      #2c2c2e 0%,
+      #000000 70%);
+  background-image: -moz-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 80%);
+  background-image: -o-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 90%);
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
   z-index: 3;
   background-repeat: no-repeat;
@@ -759,24 +741,18 @@ h1 {
 
 .four {
   background: #282537;
-  background-image: -webkit-radial-gradient(
-    top,
-    circle cover,
-    #2c2c2e 0%,
-    #000000 70%
-  );
-  background-image: -moz-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 80%
-  );
-  background-image: -o-radial-gradient(
-    top,
-    circle cover,
-    #3c3b52 0%,
-    #000000 90%
-  );
+  background-image: -webkit-radial-gradient(top,
+      circle cover,
+      #2c2c2e 0%,
+      #000000 70%);
+  background-image: -moz-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 80%);
+  background-image: -o-radial-gradient(top,
+      circle cover,
+      #3c3b52 0%,
+      #000000 90%);
   background-image: radial-gradient(top, circle cover, #3c3b52 0%, #000000 00%);
 
   z-index: 2;
@@ -807,8 +783,7 @@ input[type="radio"] {
   transition: transform 0.4s ease;
   cursor: pointer;
   overflow: hidden;
-  -webkit-box-reflect: below 1px
-    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+  -webkit-box-reflect: below 1px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   border-radius: 0px;
 }
 
@@ -867,37 +842,37 @@ img {
   display: block;
 }
 
-#item-1:checked ~ .cards #work-4,
-#item-2:checked ~ .cards #work-1,
-#item-3:checked ~ .cards #work-2,
-#item-4:checked ~ .cards #work-3 {
+#item-1:checked~.cards #work-4,
+#item-2:checked~.cards #work-1,
+#item-3:checked~.cards #work-2,
+#item-4:checked~.cards #work-3 {
   transform: translatex(-40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked ~ .cards #work-2,
-#item-2:checked ~ .cards #work-3,
-#item-3:checked ~ .cards #work-4,
-#item-4:checked ~ .cards #work-1 {
+#item-1:checked~.cards #work-2,
+#item-2:checked~.cards #work-3,
+#item-3:checked~.cards #work-4,
+#item-4:checked~.cards #work-1 {
   transform: translatex(40%) scale(0.8);
   opacity: 0.4;
   z-index: 0;
 }
 
-#item-1:checked ~ .cards #work-1,
-#item-2:checked ~ .cards #work-2,
-#item-3:checked ~ .cards #work-3,
-#item-4:checked ~ .cards #work-4 {
+#item-1:checked~.cards #work-1,
+#item-2:checked~.cards #work-2,
+#item-3:checked~.cards #work-3,
+#item-4:checked~.cards #work-4 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
 }
 
-#item-1:checked ~ .cards #work-1,
-#item-2:checked ~ .cards #work-2,
-#item-3:checked ~ .cards #work-3,
-#item-4:checked ~ .cards #work-4 {
+#item-1:checked~.cards #work-1,
+#item-2:checked~.cards #work-2,
+#item-3:checked~.cards #work-3,
+#item-4:checked~.cards #work-4 {
   transform: translatex(0) scale(1);
   opacity: 1;
   z-index: 1;
@@ -1081,7 +1056,7 @@ img {
 }
 
 /* BOXES hover */
-.container-timeline:hover > .content,
+.container-timeline:hover>.content,
 .left {
   opacity: 1;
 }
@@ -1122,6 +1097,7 @@ img {
 
 /* Media queries */
 @media screen and (max-width: 600px) {
+
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
@@ -1182,6 +1158,7 @@ h2 {
 
 /* Media queries */
 @media only screen and (min-width: 280px) and (max-width: 425px) and (orientation: portrait) {
+
   /* first page */
   h1 {
     width: 100%;
@@ -1286,6 +1263,7 @@ h2 {
 
 /* iPad PORTRAIT style here */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+
   body,
   html {
     width: 100%;
@@ -1393,6 +1371,7 @@ h2 {
 
 /* Laptops, Desktops */
 @media (min-width: 1024px) and (max-width: 1280px) {
+
   body,
   html {
     width: 100%;
@@ -1517,8 +1496,9 @@ h2 {
   }
 }
 
-/* Large desktop */
+/* Large desktop 1281px */
 @media (min-width: 1281px) {
+
   body,
   html {
     width: 102%;
@@ -1585,6 +1565,7 @@ h2 {
 
 /*Surafce duo portrait*/
 @media screen and (min-width: 426px) and (max-width: 600px) and (orientation: portrait) {
+
   /* first page */
   h1 {
     width: 100%;
@@ -1687,6 +1668,7 @@ h2 {
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px) {
+
   body,
   html {
     width: 100%;
@@ -1792,6 +1774,7 @@ h2 {
 }
 
 @media only screen and (min-width: 882px) and (max-width: 1023px) {
+
   body,
   html {
     width: 100%;
@@ -1895,6 +1878,7 @@ h2 {
     background: rgba(255, 255, 255, 0.9);
   }
 }
+
 /*PHONES landscape*/
 
 @media only screen and (min-device-height: 320px) and (max-device-width: 881px) and (orientation: landscape) {
@@ -1902,30 +1886,38 @@ h2 {
     width: 100%;
     height: auto;
   }
+
   html {
     width: 100%;
     height: auto;
   }
+
   .glitch {
     display: none;
   }
+
   .profile-image {
     display: none;
   }
+
   .name-intro {
     margin-top: 100px;
   }
+
   .blinking-cursor {
     font-size: 50px;
   }
+
   .page {
     height: 450px;
   }
+
   #social-two {
     transform: scale(0.5);
     left: 50%;
     top: 35%;
   }
+
   /* third page */
   .cards {
     width: 75%;
@@ -1953,40 +1945,49 @@ h2 {
   .card {
     height: 200px;
   }
+
   .content {
     height: 100px;
   }
+
   .modal-content {
     width: 50%;
     height: 35%;
     margin-top: 290px;
   }
+
   .modal {
     width: 100%;
     height: 900px;
     background-color: transparent;
   }
+
   .close {
     top: 300px;
     right: 200px;
     color: #000000;
     z-index: 1;
   }
+
   .card:hover .overlay-text {
     height: 25%;
   }
+
   .span-text {
     font-size: 20px;
   }
+
   .span-subtext {
     font-size: 16px;
   }
 }
+
 /* iPad LANDSCAPE style here */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .page {
-    height: 768px;
+    height: 900px;
   }
+
   body,
   html {
     width: 100%;
@@ -2056,13 +2057,15 @@ h2 {
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 0px;
+    margin-top: 140px;
     transform: scale(1);
-    height: 90%;
+    height: 80%;
   }
-    .content{
-      height: 100%;
-    }
+
+  .content {
+    height: 100%;
+  }
+
   .timeline-text {
     font-size: 16px;
     line-height: 15px;
@@ -2091,6 +2094,6 @@ h2 {
     margin-left: 0px;
     width: 100%;
     height: 720px;
-    background: rgba(0, 0, 0, 0.9);
+    background: transparent;
   }
 }
