--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1158,7 +1158,11 @@ h2 {
 
 /* Media queries */
 @media only screen and (min-width: 280px) and (max-width: 425px) and (orientation: portrait) {
-
+  body{
+    width: 100%;
+     
+  }
+ 
   /* first page */
   h1 {
     width: 100%;
@@ -1181,11 +1185,11 @@ h2 {
   }
 
   .about-me-text-two {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     justify-content: center;
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
   }
 
   #social-two {
@@ -1220,11 +1224,12 @@ h2 {
   .timeline {
     margin-top: 50px;
     overflow: hidden;
+    transform: scale(0.8);
   }
 
   .timeline-text {
-    font-size: 3vw;
-    line-height: 12px;
+    font-size: 14px;
+    line-height: 14px;
   }
 
   .four .social-menu {
@@ -1365,7 +1370,7 @@ h2 {
     margin-left: 0px;
     width: 100%;
     height: 900px;
-    background: rgba(0, 0, 0, 0.9);
+  background-color: #000000cc;
   }
 }
 
@@ -1491,8 +1496,8 @@ h2 {
 
   .close {
     color: white;
-    margin-right: 100px;
-    margin-top: 100px;
+    margin-right: 0px;
+    margin-top: 140px!important;
   }
 }
 
