--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1205,6 +1205,8 @@ h2 {
   /* second page */
   .about-me-text-one {
     font-size: 40px;
+
+    width: 100%;
   }
 
   .about-me-text-two {
@@ -1213,12 +1215,13 @@ h2 {
     justify-content: center;
     margin: 0 auto;
     width: 90%;
+  
   }
 
   #social-two {
     transform: scale(0.5);
     left: 50%;
-    top: 35%;
+    top: 25%;
   }
 
   .glitch {
