--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1181,6 +1181,7 @@ h2 {
 }
 
 /* Media queries */
+/* phones portrait */
 @media only screen and (min-width: 280px) and (max-width: 425px) and (orientation: portrait) {
   body {
     width: 100%;
@@ -1530,12 +1531,15 @@ h2 {
   }
 }
 
-/* Large desktop 1281px */
-@media (min-width: 1281px) {
+/* Large desktop 1281px and 1440px */
+@media (min-width: 1281px) and (max-width:1500px) {
   body,
   html {
-    width: 102%;
-    margin: 0 auto;
+  width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+   
   }
 
   * {
@@ -1543,8 +1547,13 @@ h2 {
     font-family: Poppins, Montserrat, sans-serif;
     padding: 0;
     margin: 0;
+    /* background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important; */
   }
-
+  .four .social-menu {
+    visibility: hidden;
+  }
   .about-me-text-two {
     width: 80%;
   }
@@ -1565,8 +1574,12 @@ h2 {
 
   /* third page */
   .cards {
-    width: 130%;
+    width: 125%;
   }
+ .work-icons{
+   width: 400px;
+  
+ }
 }
 
 /* 4k screens */
