--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1182,8 +1182,8 @@ h2 {
   /* second page */
   .about-me-text-one {
     font-size: 40px;
-
-    width: 100%;
+    width: 95%;
+    margin-left: 0px;
   }
 
   .about-me-text-two {
